--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "backend",
+  "name": "facebook",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "22.14.0"
   },
   "keywords": [],
   "author": "",
